# frontend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build  meson_options.txt
android/: local.properties
android/app/: build.gradle
android/app/src/main/res/values/: strings.xml
cmake/modules/: FindCACA.cmake
libs/: CMakeLists.txt
libs/imgui/backends/: imgui_impl_mgb.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
libs/nativefiledialog/: nfd_zenity.c
src/: CMakeLists.txt  filedialog.c  main.c  mgb.c  mgb.h  romloader.c
src/gui/: gui.c  gui.cpp  gui.h  imgui_wrapper.cpp  imgui_wrapper.hpp
src/gui/dearimgui/: dearimgui.cpp  dearimgui.h
src/gui/dearimgui/menu/: main.cpp
src/gui/menu/: main.cpp
src/gui/nogui/: nogui.c  nogui.h
src/ifile/: ifile.c  ifile.h
src/ifile/cfile/: cfile.c
src/ifile/mem/: mem.c
src/ifile/zip/: zip.c
src/video/: interface.c  interface.h
src/video/caca/: caca.c  caca.h
src/video/ncurses/: ncurses.c  ncurses.h
src/video/sdl2/: sdl2.c  sdl2.h  sdl2_opengl.c  sdl2_opengl.h
src/video/sdl2/base/: base.c  base.h
subprojects/: TotalGB.wrap  imgui.wrap  minizip.wrap
subprojects/packagefiles/TotalGB/: meson.build
subprojects/packagefiles/imgui/: meson.build
subprojects/packagefiles/minizip/: meson.build
