# todo: add more options here, such as debug / release

# option for selecting the video mode, use -Dvideo=xxxx
option('video', type : 'combo',
		choices : [
			'null',
			'sdl1',
			'sdl1_opengl',
			'sdl2',
			'sdl2_opengl',
		],
		value : 'sdl2',
		description : 'Choose video backend [Default : sdl2]')

# option for selecting the video mode, use -Daudio=xxxx
option('audio', type : 'combo',
		choices : [
			'null',
			'sdl1',
			'sdl2',
			'openal',
		],
		value : 'sdl2',
		description : 'Choose audio backend [Default : sdl2]')
